# libaps

./: .gitignore  README.md  appveyor.yml  package_release.sh
.github/workflows/: cmake.yml
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  quickstart.rst  sequencefiles.rst  specs.rst
doc/images/: pulse sequence.key
src/: CMakeLists.txt
src/lib/: APS.cpp  APS.h  APSRack.cpp  APSRack.h  Channel.cpp  Channel.h  FPGA.cpp  FPGA.h  FTDI.cpp  LLBank.cpp  LLBank.h  Makefile  constants.h  debug_oscillator.cpp  headings.h  libaps.cpp  libaps.h  logger.h  test.cpp  test.h
src/matlab/@APS/: APS.m  libaps.m  libaps64.m
src/python/: APS.py  aps.py  setup.py
